<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <android.support.v4.view.PagerTabStrip
            android:id="@+id/pager_tap_strip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:textAppearance="@style/pager_tab_strip_text" />

        <ScrollView
            android:id="@+id/tab_status"
            android:tag="@string/tab_status"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/button_start"
                    android:text="@string/start"
                    android:enabled="false"
                    android:textSize="@dimen/text_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/button_stop"
                    android:text="@string/stop"
                    android:enabled="false"
                    android:textSize="@dimen/text_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/status"
                    android:textSize="@dimen/text_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </ScrollView>

        <ScrollView
            android:id="@+id/tab_log"
            android:tag="@string/tab_log"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/button_clear_log"
                    android:text="@string/clear"
                    android:textSize="@dimen/text_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/button_unlink"
                    android:text="@string/unlink"
                    android:textSize="@dimen/text_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/log"
                    android:textSize="@dimen/text_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </ScrollView>

    </android.support.v4.view.ViewPager>

</LinearLayout>